--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </td>
     <td><h1>Mhary Joy Alcaide</h1>
       <p><em>Software Engineer</em></p>
-      <p>I love coffee and spending the day at the beach.  </p>
+      <p>I love coffee and playing CATAN! </p>
     </td>
   </tr>
 </table>
